# Project-Vocabulary

./: .gitignore  README.md  pyproject.toml
tests/functional/: test_home.py
tests/unit/: test_models.py
website/: __init__.py  auth.py  forms.py  models.py  utils.py  views.py
website/static/assets/css/: myStyle.css
website/static/images/: icons-512px.ai
website/templates/: alerts.html  base.html  footer.html  form-example.html  form-login.html  form-meaning.html  form-register.html  form-word.html  header.html  index.html  modal-login.html  modal-register.html  modal-word.html  navbar.html  wordlist.html
